add wireless troubleshooting

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionTroubleshooting">
-                                    <div class="accordion-body">Ensure Wi-Fi is enabled on your iPhone. If the issue persists, your vehicle also needs to have a working navigation database and your vehicle needs to be in a country where 5 GHz Wi-Fi is allowed.</div>
+                                    <div class="accordion-body">Ensure Wi-Fi is enabled on your iPhone. If the issue persists, your vehicle also needs to have a working navigation database, a 5 GHz antenna (some vehicles shipped without one), and needs to be in a country where 5 GHz Wi-Fi is allowed. 5 GHz is disallowed in the following countries: Afghanistan, Algeria, Angola, Antigua & Barbuda, Aruba, Bangladesh, Barbados, Belize, Benin, Bhutan, Bolivia, Burkina Faso, Burundi, Cambodia, Chile, China, Congo (Dem. Rep.), Cuba, Djibouti, Dominican Republic, Egypt, Ethiopia, French Polynesia, Gabon, Ghana, Grenada, India, Indonesia, Iran, Iraq, Israel, Ivory Coast, Japan, Kenya, Kuwait, Laos, Lebanon, Lesotho, Liberia, Libya, Madagascar, Malawi, Maldives, Mongolia, Montserrat, Morocco, Myanmar, Nepal, Nicaragua, Niger, Nigeria, North Korea, Oman, Pakistan, Papua New Guinea, Paraguay, Peru, Philippines, Qatar, Rwanda, Saint Kitts & Nevis, Saint Lucia, Saint Vincent & the Grenadines, Saudi Arabia, Senegal, Seychelles, Sierra Leone, Solomon Islands, Somalia, South Africa, Sri Lanka, Sudan, Suriname, Syria, Tajikistan, Tanzania, Togo, Tonga, Trinidad & Tobago, Tunisia, Turkmenistan, Uganda, United Arab Emirates, Uzbekistan, Vanuatu, Venezuela, Vietnam, Yemen, Zambia, Zimbabwe.</div>
                                 </div>
                             </div>
                         </div>
@@ -557,7 +557,7 @@
                                             </svg>
                                         </a>
                                     </td>
-                                    <td>activates wired & wireless Apple CarPlay</td>
+                                    <td>activates wired & wireless Apple CarPlay (wireless not supported in all vehicles/countries, see troubleshooting)</td>
                                     <td>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
