removed Bentley, added E-tron note, added green engineering menu

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                             <tr>
                                                 <td>2018 - 2020</td>
                                                 <td>Audi</td>
-                                                <td>E-tron</td>
+                                                <td>E-tron *extra steps - contact me</td>
                                                 <td>MIB2+ High</td>
                                             </tr>
                                             <tr>
@@ -105,24 +105,6 @@
                                                 <td>2018 - 2020</td>
                                                 <td>Audi</td>
                                                 <td>Q8</td>
-                                                <td>MIB2+ High</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2019 - 2021</td>
-                                                <td>Bentley</td>
-                                                <td>Bentayga</td>
-                                                <td>MIB2+ High</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2019 - 2021</td>
-                                                <td>Bentley</td>
-                                                <td>Continental GT</td>
-                                                <td>MIB2+ High</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2019 - 2021</td>
-                                                <td>Bentley</td>
-                                                <td>Flying Spur</td>
                                                 <td>MIB2+ High</td>
                                             </tr>
                                             <tr>
@@ -462,7 +444,6 @@
                                     <th scope="col">Src</th>
                                     <th scope="col">Description</th>
                                     <th scope="col">Au</th>
-                                    <th scope="col">Be</th>
                                     <th scope="col">La</th>
                                     <th scope="col">Po</th>
                                     <th scope="col">VW</th>
@@ -496,7 +477,6 @@
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
                                         </svg>
                                     </td>
-                                    <td></td>
                                     <td></td>
                                     <td>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
@@ -533,7 +513,6 @@
                                         </svg>
                                     </td>
                                     <td></td>
-                                    <td></td>
                                     <td>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
@@ -558,11 +537,6 @@
                                         </a>
                                     </td>
                                     <td>activates wired & wireless Apple CarPlay (wireless not supported in all vehicles/countries, see troubleshooting)</td>
-                                    <td>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-                                        </svg>
-                                    </td>
                                     <td>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
@@ -621,11 +595,6 @@
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
                                         </svg>
                                     </td>
-                                    <td>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-                                        </svg>
-                                    </td>
                                 </tr>
                                 <tr>
                                     <td>Baidu CarLife</td>
@@ -644,11 +613,6 @@
                                         </a>
                                     </td>
                                     <td>activates wired (iOS/Android) & wireless (iOS) Baidu CarLife</td>
-                                    <td>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-                                        </svg>
-                                    </td>
                                     <td>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
@@ -700,9 +664,8 @@
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                    <td></td>
                                 </tr>
-                                <!--<tr>
+                                <tr>
                                     <td>Green Engineering Menu</td>
                                     <td><a href="https://github.com/LawPaul/MH2p_GreenEngineeringMenu/archive/refs/heads/main.zip">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -739,12 +702,7 @@
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
                                         </svg>
                                     </td>
-                                    <td>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-                                        </svg>
-                                    </td>
-                                </tr>-->
+                                </tr>
                             </tbody>
                         </table>
                     </div>
