remove checkbox flex

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h5 class="card-title">Mods</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Select vehicle brand and desired mods. Then download the bundle and unzip onto a FAT32 formatted SD card or flash drive. Insert into your vehicle while it is running.</p>
+                        <p class="card-text">Select vehicle brand and desired mods. Download the bundle and unzip onto a FAT32 formatted SD card or flash drive. Insert into your vehicle while it is running.</p>
 
                         <div id="mods-list" class="mb-2">
                             <p class="text-muted">Loading available mods…</p>
