use updated windows video guide

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                                 </h2>
                                 <div id="flush-collapseWin" class="accordion-collapse collapse show" aria-labelledby="flush-headingWindows" data-bs-parent="#accordionHowTo">
                                     <div class="accordion-body">
-                                        <p>note: this video was made before the mods bundle feature was added, now you download and unzip a single bundle instead of the mod kit and mods separately</p>
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7GXKUY9xSU?si=c_YkuBgdXwYG8JVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/TloCK99HaJs?si=eUmspT1bhE86XCU1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
