use updated macOS video guide

--- a/index.html
+++ b/index.html
@@ -188,24 +188,7 @@
                                 </h2>
                                 <div id="flush-collapseMac" class="accordion-collapse collapse" aria-labelledby="flush-headingMac" data-bs-parent="#accordionHowTo">
                                     <div class="accordion-body">
-                                        <p>note: this video was made before the mods bundle feature was added, now you download and unzip a single bundle instead of the mod kit and mods separately</p>
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1dk1Hd8h5z8?si=bRw7-uzFe_Ji40LE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                        <ul>
-                                            <li>files automatically added by Apple need to be removed:
-                                                <ul>
-                                                    <li>option A:
-                                                        <ul>
-                                                            <li>use the free 30 day trial of <a target="_blank" href="https://www.zeroonetwenty.com/blueharvest/">BlueHarvest</a> to clean the update media immediately before physically removing it</li>
-                                                        </ul>
-                                                    </li>
-                                                    <li>option B:
-                                                        <ul>
-                                                            <li>in Terminal, run <code>dot_clean -m [update media dir]</code></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7GyxGjJduF0?si=02kvXv_cDQ15JG7d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
