updated E-tron guidance

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                             <tr>
                                                 <td>2018 - 2020</td>
                                                 <td>Audi</td>
-                                                <td>E-tron *extra steps - contact me</td>
+                                                <td>E-tron *extra steps for Apple CarPlay or Android Auto - contact me</td>
                                                 <td>MIB2+ High</td>
                                             </tr>
                                             <tr>
