further updated Android Auto troubleshooting

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionTroubleshooting">
-                                    <div class="accordion-body">Confirm your cable supports data and is not power only. Porsche: if you used Android Auto on the vehicle prior to December 2025, a PCM factory reset may be necessary to completely remove the bugged Android device(s).</div>
+                                    <div class="accordion-body">Confirm your cable supports data and is not power only. Porsche: if you used Android Auto on the vehicle prior to December 2025, install the latest Android Auto mod. A PCM factory reset may also be necessary to completely remove the bugged Android device(s).</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
